--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
-        <div class="container"></div>
+        <div class="container">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+        </div>
     </body>
 </html>
