--- a/index.html
+++ b/index.html
@@ -9,11 +9,36 @@
     </head>
     <body>
         <div class="container">
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
+            <div class="row">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="row">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="row">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="row">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
+            <div class="row">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
         </div>
     </body>
 </html>
