--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <div class="container">
+            <div class="display">
+                
+            </div>
             <div class="row">
                 <button></button>
                 <button></button>
