--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 
             </div>
             <div class="row">
-                <button></button>
+                <button>AC</button>
                 <button></button>
                 <button></button>
                 <button></button>
