--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="row">
                 <button>AC</button>
-                <button></button>
+                <button>+/-</button>
                 <button></button>
                 <button></button>
             </div>
