Add % that will get percentage of current display

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <button>AC</button>
                 <button>+/-</button>
-                <button></button>
+                <button>%</button>
                 <button></button>
             </div>
             <div class="row">
