--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button>AC</button>
                 <button>+/-</button>
                 <button>%</button>
-                <button></button>
+                <button>/</button>
             </div>
             <div class="row">
                 <button></button>
