Add * that multiple two number

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
-                <button></button>
+                <button>*</button>
             </div>
             <div class="row">
                 <button></button>
