--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
-                <button></button>
+                <button>+</button>
             </div>
             <div class="row">
                 <button></button>
