--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
-                <button></button>
+                <button>-</button>
             </div>
             <div class="row">
                 <button></button>
