--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <button></button>
                 <button></button>
-                <button></button>
+                <button>=</button>
             </div>
         </div>
     </body>
