--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
                 <button>/</button>
             </div>
             <div class="row">
-                <button></button>
-                <button></button>
-                <button></button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
                 <button>*</button>
             </div>
             <div class="row">
-                <button></button>
-                <button></button>
-                <button></button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
                 <button>+</button>
             </div>
             <div class="row">
-                <button></button>
-                <button></button>
-                <button></button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
                 <button>-</button>
             </div>
             <div class="row">
-                <button></button>
+                <button>0</button>
                 <button></button>
                 <button>=</button>
             </div>
