Add . to use floating numbers

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="row">
                 <button>0</button>
-                <button></button>
+                <button>.</button>
                 <button>=</button>
             </div>
         </div>
